# SwiftKeyExi

./: .gitignore  CHANGES.md  README.md  build.gradle  settings.gradle
app/: .gitignore  CMakeLists.txt  build.gradle  proguard-project.txt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: FontLoader.cpp  StringUtils.h  log.h
app/src/main/res/anim/: blink_animation.xml  slide_out_left.xml
app/src/main/res/animator/: emoji_button_down.xml
app/src/main/res/color/: popup_widget_selector.xml  statelist.xml
app/src/main/res/drawable/: emoji_add_background.xml  emoji_blocked_background.xml  ic_button_delete.xml  ic_draghandle.xml  ic_emoji_add_background_icon.xml  ic_emoji_blocked_background_icon.xml  ic_keyboard_arrow_left.xml  ic_keyboard_arrow_right.xml  ic_keyboardbutton.xml  ic_menu_add.xml  ic_menu_clear.xml  ic_menu_copy_all_emoji.xml  ic_menu_copy_panel.xml  ic_menu_delete.xml  ic_menu_emoji_column_width.xml  ic_menu_import.xml  ic_menu_input.xml  ic_pick_icon.xml  ic_selection_mode_shift_delete.xml  ic_selection_mode_two_finger.xml  ic_space_modifier_key.xml  ic_space_modifier_menu.xml  ic_swipe_direction_any.xml  ic_swipe_direction_horizontal.xml  ic_swipe_mode_anywhere.xml  ic_swipe_mode_disabled.xml  ic_swipe_mode_hold_any.xml  ic_swipe_mode_hold_shift.xml  ic_swipe_mode_number_row.xml  ic_swipe_mode_space.xml  popup_background.xml  popup_widget_button_state_selected.xml  settings_icon.xml  small_add_button.xml  thumb_image.xml
app/src/main/res/layout/: activity_main.xml  activity_quickmenu_config.xml  backup_selection_dialog.xml  dictionary_fragment_layout.xml  (+40 more)
(+369 files in other folders)
